# markmaton

./: .gitignore  CHANGELOG.md  LICENSE  README.md  go.mod  go.sum  hatch_build.py  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  workflow.yml
cmd/markmaton-engine/: main.go  main_test.go
docs/: README.md  architecture-brief.md  benchmark-matrix.md  benchmark-workflow.md  firecrawl-reference-audit.md  firecrawl-scrape-traceback.md  implementation-handoff.md  local-smoke.md  packaging-layout.md  pypi-release.md  usage.md
internal/cleanhtml/: clean.go  clean_test.go
internal/convert/: builder.go  builder_test.go  convert.go  convert_test.go  hooks.go  hooks_test.go  plugins.go
internal/engine/: process.go  process_test.go
internal/images/: extract.go  extract_test.go
internal/links/: extract.go  extract_test.go
internal/metadata/: extract.go  extract_test.go
internal/model/: types.go
internal/postprocess/: postprocess.go  postprocess_test.go
internal/quality/: quality.go  quality_test.go
internal/resolve/: resolve.go  resolve_test.go
internal/testutil/: testdata.go
issues/: 2026-04-08_10-38-05-markmaton-parser-architecture.csv  2026-04-08_11-04-40-markmaton-implementation-bootstrap.csv  2026-04-08_16-03-08-markmaton-benchmark-driven-refinement.csv  2026-04-08_17-58-57-markmaton-converter-customization-layer.csv  2026-04-08_19-17-53-markmaton-pypi-release-readiness.csv  2026-04-09_14-01-19-browser-html-capture-skill.csv
markmaton/: __init__.py  cli.py  engine.py  models.py
plan/: 2026-04-08_10-38-05-markmaton-parser-architecture.md  2026-04-08_11-04-40-markmaton-implementation-bootstrap.md  2026-04-08_16-03-08-markmaton-benchmark-driven-refinement.md  2026-04-08_17-58-57-markmaton-converter-customization-layer.md  2026-04-08_19-17-53-markmaton-pypi-release-readiness.md  2026-04-09_14-01-19-browser-html-capture-skill.md
skills/browser-html-capture/: SKILL.md
skills/browser-html-capture/references/: integration-patterns.md  usage.md
skills/browser-html-capture/scripts/: capture_html.py
skills/html-to-markdown/: SKILL.md
skills/html-to-markdown/references/: integration-patterns.md  usage.md
skills/html-to-markdown/scripts/: capture_html.py  markmaton_convert.py
testdata/fixtures/: article.html  news.html
testdata/fixtures/core/: docs.html
testdata/fixtures/regression/: card_grid.html  careers_landing.html  github_issue_timeline.html  github_repo_shell.html  job_detail.html  openai_blog_shell.html  stackoverflow_question_thread.html
testdata/golden/: docs.md
testdata/golden/core/: article.md  news.md
tests/integration/: __init__.py  test_cli_integration.py
tests/smoke/: installed_cli_smoke.py
tests/unit/: test_browser_html_capture_script.py  test_capture_html_script.py  test_cli.py  test_convert_script.py  test_engine.py  test_hatch_build.py  test_models.py  test_package.py  test_skill_artifacts.py
