[build-system]
requires = ["hatchling>=1.27.0", "packaging>=24.0"]
build-backend = "hatchling.build"

[project]
name = "markmaton"
version = "0.1.4"
description = "Lightweight HTML-to-Markdown tooling for agent workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "appautomaton" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/appautomaton/markmaton"
Repository = "https://github.com/appautomaton/markmaton"
Issues = "https://github.com/appautomaton/markmaton/issues"

[project.scripts]
markmaton = "markmaton.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["markmaton"]

[tool.hatch.build.targets.sdist]
include = [
  "/cmd",
  "/internal",
  "/markmaton",
  "/tests",
  "/testdata",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/go.mod",
  "/go.sum",
  "/hatch_build.py",
]

[tool.hatch.build.hooks.custom]
