[build-system]
requires = ["hatchling>=1.27.0", "packaging>=24.0"]
build-backend = "hatchling.build"

[project]
name = "markmaton"
version = "0.1.5"
description = "Lightweight HTML-to-Markdown tooling for agent workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "appautomaton" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/appautomaton/markmaton"
Repository = "https://github.com/appautomaton/markmaton"
Issues = "https://github.com/appautomaton/markmaton/issues"
Documentation = "https://github.com/appautomaton/markmaton/tree/main/docs"
Changelog = "https://github.com/appautomaton/markmaton/blob/main/CHANGELOG.md"

[project.scripts]
markmaton = "markmaton.cli:main"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "hatchling>=1.27.0",
  "packaging>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["markmaton"]

[tool.hatch.build.targets.sdist]
include = [
  "/cmd",
  "/internal",
  "/markmaton",
  "/tests",
  "/testdata",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/go.mod",
  "/go.sum",
  "/hatch_build.py",
]

[tool.hatch.build.hooks.custom]
